# marketstack-openapi.json
@@ -65,7 +65,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_from",
             "in": "query"
           },
@@ -77,7 +77,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_to",
             "in": "query"
           },
@@ -218,7 +218,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_from",
             "in": "query"
           },
@@ -230,7 +230,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_to",
             "in": "query"
           },
@@ -328,7 +328,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date",
             "in": "path"
           },
@@ -383,7 +383,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_from",
             "in": "query"
           },
@@ -395,7 +395,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_to",
             "in": "query"
           },
@@ -550,7 +550,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_from",
             "in": "query"
           },
@@ -562,7 +562,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_to",
             "in": "query"
           },
@@ -717,7 +717,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_from",
             "in": "query"
           },
@@ -729,7 +729,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_to",
             "in": "query"
           },
@@ -827,7 +827,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date",
             "in": "path"
           },
@@ -896,7 +896,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_from",
             "in": "query"
           },
@@ -908,7 +908,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_to",
             "in": "query"
           },
@@ -1039,7 +1039,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_from",
             "in": "query"
           },
@@ -1051,7 +1051,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_to",
             "in": "query"
           },
@@ -1182,7 +1182,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_from",
             "in": "query"
           },
@@ -1194,7 +1194,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_to",
             "in": "query"
           },
@@ -1721,7 +1721,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_from",
             "in": "query"
           },
@@ -1733,7 +1733,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_to",
             "in": "query"
           },
@@ -1923,7 +1923,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date",
             "in": "path"
           },
@@ -2064,7 +2064,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_from",
             "in": "query"
           },
@@ -2076,7 +2076,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_to",
             "in": "query"
           },
@@ -2266,7 +2266,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date",
             "in": "path"
           },
@@ -2383,7 +2383,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_from",
             "in": "query"
           },
@@ -2395,7 +2395,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_to",
             "in": "query"
           }
@@ -2503,7 +2503,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_from",
             "in": "query"
           },
@@ -2515,7 +2515,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_to",
             "in": "query"
           }
@@ -2901,7 +2901,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_from",
             "in": "query"
           },
@@ -2913,7 +2913,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_to",
             "in": "query"
           },
@@ -3113,7 +3113,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date",
             "in": "path"
           },
@@ -3264,7 +3264,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_from",
             "in": "query"
           },
@@ -3276,7 +3276,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date_to",
             "in": "query"
           },
@@ -3476,7 +3476,7 @@
               "type": "string",
               "description": "Date in the formats %Y-%m-%d, %Y-%m-%d %H:%M:%S or ISO-8601 %Y-%m-%dT%H:%M:%S+%Z"
             },
-            "example": "2022-11-03T00:00:00+0000",
+            "example": "2022-11-05T00:00:00+0000",
             "name": "date",
             "in": "path"
           },
@@ -3749,8 +3749,11 @@
           "acronym",
           "mic",
           "country",
+          "country_code",
           "city",
-          "website"
+          "website",
+          "currency",
+          "timezone"
         ],
         "type": "object",
         "properties": {
@@ -3787,6 +3790,48 @@
           },
           "timezone": {
             "$ref": "#/components/schemas/Timezone"
+          }
+        }
+      },
+      "ExchangeBase": {
+        "title": "ExchangeBase",
+        "required": [
+          "name",
+          "acronym",
+          "mic",
+          "country",
+          "city",
+          "website"
+        ],
+        "type": "object",
+        "properties": {
+          "name": {
+            "title": "Name",
+            "type": "string"
+          },
+          "acronym": {
+            "title": "Acronym",
+            "type": "string"
+          },
+          "mic": {
+            "title": "Mic",
+            "type": "string"
+          },
+          "country": {
+            "title": "Country",
+            "type": "string"
+          },
+          "country_code": {
+            "title": "Country Code",
+            "type": "string"
+          },
+          "city": {
+            "title": "City",
+            "type": "string"
+          },
+          "website": {
+            "title": "Website",
+            "type": "string"
           }
         }
       },
@@ -3830,12 +3875,6 @@
           "website": {
             "title": "Website",
             "type": "string"
-          },
-          "currency": {
-            "$ref": "#/components/schemas/Currency"
-          },
-          "timezone": {
-            "$ref": "#/components/schemas/Timezone"
           },
           "eod": {
             "title": "Eod",
@@ -3886,12 +3925,6 @@
           "website": {
             "title": "Website",
             "type": "string"
-          },
-          "currency": {
-            "$ref": "#/components/schemas/Currency"
-          },
-          "timezone": {
-            "$ref": "#/components/schemas/Timezone"
           },
           "intraday": {
             "title": "Intraday",
@@ -3970,12 +4003,6 @@
           "website": {
             "title": "Website",
             "type": "string"
-          },
-          "currency": {
-            "$ref": "#/components/schemas/Currency"
-          },
-          "timezone": {
-            "$ref": "#/components/schemas/Timezone"
           },
           "tickers": {
             "title": "Tickers",
@@ -4357,7 +4384,9 @@
           "name",
           "symbol",
           "has_intraday",
-          "has_eod"
+          "has_eod",
+          "country",
+          "stock_exchange"
         ],
         "type": "object",
         "properties": {
@@ -4369,12 +4398,6 @@
             "title": "Symbol",
             "type": "string"
           },
-          "stock_exchange": {
-            "$ref": "#/components/schemas/Exchange"
-          },
-          "timezone": {
-            "$ref": "#/components/schemas/Timezone"
-          },
           "has_intraday": {
             "title": "Has Intraday",
             "type": "boolean"
@@ -4382,6 +4405,13 @@
           "has_eod": {
             "title": "Has Eod",
             "type": "boolean"
+          },
+          "country": {
+            "title": "Country",
+            "type": "string"
+          },
+          "stock_exchange": {
+            "$ref": "#/components/schemas/ExchangeBase"
           }
         }
       },
@@ -4392,6 +4422,7 @@
           "symbol",
           "has_intraday",
           "has_eod",
+          "country",
           "eod"
         ],
         "type": "object",
@@ -4404,12 +4435,6 @@
             "title": "Symbol",
             "type": "string"
           },
-          "stock_exchange": {
-            "$ref": "#/components/schemas/Exchange"
-          },
-          "timezone": {
-            "$ref": "#/components/schemas/Timezone"
-          },
           "has_intraday": {
             "title": "Has Intraday",
             "type": "boolean"
@@ -4417,6 +4442,10 @@
           "has_eod": {
             "title": "Has Eod",
             "type": "boolean"
+          },
+          "country": {
+            "title": "Country",
+            "type": "string"
           },
           "eod": {
             "title": "Eod",
@@ -4434,6 +4463,7 @@
           "symbol",
           "has_intraday",
           "has_eod",
+          "country",
           "intraday"
         ],
         "type": "object",
@@ -4446,12 +4476,6 @@
             "title": "Symbol",
             "type": "string"
           },
-          "stock_exchange": {
-            "$ref": "#/components/schemas/Exchange"
-          },
-          "timezone": {
-            "$ref": "#/components/schemas/Timezone"
-          },
           "has_intraday": {
             "title": "Has Intraday",
             "type": "boolean"
@@ -4459,6 +4483,10 @@
           "has_eod": {
             "title": "Has Eod",
             "type": "boolean"
+          },
+          "country": {
+            "title": "Country",
+            "type": "string"
           },
           "intraday": {
             "title": "Intraday",
